<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">


    <ListView
        android:layout_width="294dp"
        android:layout_height="210dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="150dp"
        android:background="@android:drawable/alert_light_frame" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="125dp"
        android:text="@string/ssd_header" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="190dp"
        android:layout_marginTop="125dp"
        android:text="@string/ssd_qu_header" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="236dp"
        android:layout_marginTop="125dp"
        android:text="@string/ssd_price_header"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView16"
        android:layout_alignParentTop="true"
        android:layout_marginTop="41dp"
        android:text="@string/name_lastname" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView16"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:text="@string/receipt_cod" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView21"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="38dp"
        android:text="" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView19"
        android:layout_alignBottom="@+id/textView22"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="0dp"
        android:text="" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="108dp"
        android:text="@string/total" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView19"
        android:layout_alignBottom="@+id/textView25"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="-2dp"
        android:text="@string/total_amount" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView19"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="41dp"
        android:text="@string/accept_button" />

</RelativeLayout>