<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:textAlignment="center">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="232dp"
        android:layout_marginTop="52dp"
        android:text="@string/ssd_price_header"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="186dp"
        android:layout_marginTop="52dp"
        android:text="@string/ssd_qu_header" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:text="@string/ssd_header" />

    <ListView
        android:layout_width="294dp"
        android:layout_height="210dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="77dp"
        android:background="@android:drawable/alert_light_frame" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="129dp"
        android:text="@string/buy_button" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="198dp"
        android:layout_toStartOf="@+id/button2"
        android:text="@string/total" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="0dp"
        android:text="@string/total_amount"
        android:textAlignment="textEnd" />
</RelativeLayout>