<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="43dp"
        android:text="@string/query_button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="124dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="162dp"
        android:text="@string/buy_button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="124dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="103dp"
        android:text="@string/refund_button"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="124dp" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="82dp"
        android:layout_marginBottom="127dp"
        android:text="@string/receipt_cod"
         />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="167dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_marginTop="-167dp"
        android:ems="10"
        android:hint="@string/enter_receipt"
        android:inputType="textPersonName" />

</RelativeLayout>