<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="171dp"
        android:text="@string/ssd_header" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="201dp"
        android:layout_marginTop="171dp"
        android:text="@string/ssd_qu_header" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="243dp"
        android:layout_marginTop="171dp"
        android:text="@string/ssd_price_header"
        android:textAlignment="center" />

    <ListView
        android:layout_width="294dp"
        android:layout_height="210dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="198dp"
        android:background="@android:drawable/alert_light_frame" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="78dp"
        android:layout_toStartOf="@+id/button2"
        android:text="@string/total" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="0dp"
        android:text="@string/total_amount"
        android:textAlignment="textEnd" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="10dp"
        android:text="@string/buy_button" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="31dp"
        android:entries="@array/ssdtypes"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="45dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="0dp"
        android:text="@string/ssdtexttype" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="84dp"
        android:text="@string/ssdtextAmount" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="166dp"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="12dp"
        android:text="@string/addbutton"
        android:textSize="10dp" />
</RelativeLayout>