<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/ssd_header"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="26dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:text="@string/ssd_qu_header"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="26dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="236dp"
        android:layout_marginTop="32dp"
        android:text="@string/ssd_price_header"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="26dp" />
</RelativeLayout>